--- a/index.html
+++ b/index.html
@@ -52,67 +52,67 @@
 			<!-- 中间的牌牌 -->
 			<ul class="paipai">
 				<li id="one" class="oneone">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="one" class="oneone">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="one" class="oneone">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="one" class="oneone">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="one" class="oneone">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="one" class="oneone">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="two">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="two">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="two">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="two">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="two">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="two">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="three">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="three">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="three">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="three">
-					<img class="one" src="images/goretex.png" alt="">
+					<img class="one" src="images/goretex(2).png" alt="">
 					<img class="two" src="images/goretex1.png" alt="">
 				</li>
 				<li id="three">
