--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		}
 		html,body{
 			height: 100%;
-			background-color: black;
 			overflow: hidden;
 		}
 		#wrap{
@@ -22,6 +21,7 @@
 
 	</style>
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/share.css" type="text/css" />
 </head>
 <body>
 	<div id="wrap">
@@ -134,24 +134,29 @@
 				
 			</ul>
 			<!-- 下面抽奖次数-->
-			<div class="raffle"><img src="images/choujiang.png" alt=""><span>你有的抽奖次数：3次</span></div>
+			<div class="raffle">
+				<img src="images/choujiang.png" alt="">
+				<span>你有的抽奖次数：3次</span>
+			</div>
+
 			<!-- 挑战失败 -->
 			<div class="loseFirst">
 				<img src="images/lose.png" alt="">
 			</div>
 		</div>
+
 		<!-- 通关 -->
 		<div class="pass">
 			<span>60</span>
 			<p></p>
-			<a href=""></a>
+			<a href="###"></a>
 		</div>
 
 		<!-- 遮罩层 -->
 		<div class="mask">
 			<p>0%</p>
 		</div>
-	</div>
+    </div>
 </body>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/jquery.easing.min.js"></script>
